<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonateFragment"
    >

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Donate"
        android:textColor="@color/blue"
        android:textSize="36sp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="125dp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book"
        android:layout_marginStart="150dp"
        android:layout_marginTop="200dp"
        android:textColor="@color/white"
        android:background="@color/blue"/>

    <Button
        android:id="@+id/btnMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"
        android:textColor="@color/white"
        android:layout_marginStart="150dp"
        android:layout_marginTop="270dp"
        android:background="@color/blue"/>

    <Button
        android:id="@+id/btnDress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dress"
        android:textColor="@color/white"
        android:layout_marginStart="150dp"
        android:layout_marginTop="340dp"
        android:background="@color/blue" />
</FrameLayout>